Add backend functionality to enable edge protection
